# fault-diagnosis-agent

./: README.md
fault-diagnosis-agent/: .env.example  README.md  docker-compose.yml  evaluation_report.txt  main.py  pyproject.toml  requirements.txt  test_diagnose.py  uvicorn.err
fault-diagnosis-agent/data/eval/: test_cases.json
fault-diagnosis-agent/data/feedback/: feedback.jsonl
fault-diagnosis-agent/data/processed/: fault_knowledge.json  xlsx_import_log.json
fault-diagnosis-agent/docs/: fault_diagnosis_graph.md  trae_development_log.md
fault-diagnosis-agent/scripts/: build_knowledge_base.py  draw_graph.py  evaluate.py
fault-diagnosis-agent/src/fault_diagnosis_agent/: api.py  config.py  diagnosis.py  graph.py  llm.py  models.py  prompts.py
fault-diagnosis-agent/src/fault_diagnosis_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fault-diagnosis-agent/src/fault_diagnosis_agent/retrieval/: __init__.py  document_processor.py  entity_extractor.py  fault_types.py  hybrid_retriever.py
fault-diagnosis-agent/static/: debug.html  index.html  items.html  kb.html  trace.html
fault-diagnosis-agent/static/css/: style.css
fault-diagnosis-agent/static/js/: common.js  kb.js  trace.js
fault-diagnosis-agent/tests/: test_diagnosis.py  test_entity_extractor.py
