[project]
name = "fault-diagnosis-agent"
version = "0.1.0"
description = "LangGraph-based RAG agent for oil and gas field fault diagnosis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-docx>=1.1.2",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.1.20",
]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

